updated plug-in name

--- a/plugin/src/main/res/values/strings.xml
+++ b/plugin/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Classic Long Video</string>
+    <string name="app_name">Long Video Classic</string>
     <string name="action_settings">Settings</string>
 </resources>
